# hike-tracker

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  groups_berentocht.csv  hike_tracker.db  hike_tracker.db-shm  hike_tracker.db-wal
migrations/2025-12-30-113413-0000_create_tables/: down.sql  up.sql
migrations/2025-12-30-120000_add_group_fields/: down.sql  up.sql
src/: auth.rs  cache.rs  db.rs  main.rs  models.rs  schema.rs  stats.rs
src/routes/: admin.rs  auth.rs  dashboard.rs  mod.rs  post.rs  ranking.rs  scan.rs
src/routes/admin/: groups.rs  mod.rs  posts.rs
src/routes/scan/: edit.rs  mod.rs
static/: long-press.js  style.css
templates/: base.html.tera  dashboard.html.tera  dashboard_detail.html.tera  login.html.tera  post_overview.html.tera  scan.html.tera  scan_edit.html.tera  scan_new_group.html.tera
templates/admin/: groups.html.tera  posts.html.tera
