[package]
name = "hike-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_dyn_templates = { version = "0.2", features = ["tera"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
qrcode = "0.14"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
